--- a/index.html
+++ b/index.html
@@ -1081,13 +1081,14 @@
                                     <div class="dsn-paginate-right-page"></div>
 
                                     <!-- ========== Line left & right with creative page ========== -->
-                                    <div class="line-border-style w-100 h-100"></div>
+<div class="line-border-style w-100 h-100"></div>
 
-                                    <!-- Optional JavaScript -->
-<script src="/assets/js/jquery-3.1.1.min.js"></script>
-<script src="/assets/js/plugins.min.js"></script>
-<script src="/assets/js/dsn-grid.min.js"></script>
-<script src="/assets/js/custom.js"></script>
+<!-- Optional JavaScript -->
+<!-- Fix paths by removing leading slash -->
+<script src="assets/js/jquery-3.1.1.min.js"></script>
+<script src="assets/js/plugins.min.js"></script>
+<script src="assets/js/dsn-grid.min.js"></script>
+<script src="assets/js/custom.js"></script>
 <script>
 // Check for new artwork in localStorage when index.html loads
 document.addEventListener('DOMContentLoaded', function() {
