--- a/admin-upload.html
+++ b/admin-upload.html
@@ -62,7 +62,7 @@
                     </div>`;
 
                 // Send to API
-                fetch('/api/update-gallery', {
+                fetch('https://your-vercel-domain.vercel.app/api/update-gallery', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
