--- a/admin-upload.html
+++ b/admin-upload.html
@@ -65,7 +65,8 @@
                 fetch('/api/update-gallery', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${process.env.GITHUB_TOKEN}` // Add auth header
                     },
                     body: JSON.stringify({
                         imageUrl,
@@ -75,9 +76,10 @@
                         html: artworkHTML
                     })
                 })
-                .then(response => {
+                .then(async response => {
                     if (!response.ok) {
-                        throw new Error('Failed to update gallery');
+                        const errorData = await response.json();
+                        throw new Error(errorData.error || 'Failed to update gallery');
                     }
                     return response.json();
                 })
